# TimelyBee

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: run_weixin_agent.sh  start_weixin_agent.sh  stop_weixin_agent.sh
src/agent_service/: __init__.py  background.py  orchestrator.py  types.py
src/agent_service/adapters/: botpy_adapter.py  openilink.py  weixin.py
src/agent_service/agent/: model_factory.py  runtime.py
src/agent_service/assistant/: __init__.py  intent.py  router.py  session.py
src/agent_service/cli/: main.py
src/agent_service/codex/: __init__.py  manager.py
src/agent_service/config/: settings.py
src/agent_service/storage/: sqlite_store.py
src/pydantic_ai_multichannel_agent/: __init__.py
src/timelybee/: __init__.py
tests/: test_background.py  test_botpy_adapter.py  test_intent_router.py  test_openilink_adapter.py  test_openilink_integration.py  test_runtime_history.py  test_settings.py  test_sqlite_store.py  test_weixin_adapter.py  test_weixin_listen.py
